# compiler_project

./: .gitignore  CMakeLists.txt  Compiler.cpp  Compiler.h  DFA.cpp  DFADecoder.cpp  DFAMinimizer.cpp  DFAMinimizer2.cpp  DFAMinimizerMNtheorem.cpp  DFAMinimizerPartitioning.cpp  DFAState.cpp  Grammar.txt  GrammarReader.cpp  GrammarReader.h  InputParser.h  MarkdownTable.cpp  NFA.cpp  NFAGenerator.cpp  OutputHandler.cpp  OutputHandler.h  PredictiveParserGenerator.h  README.md  RulesReader.cpp  State.cpp  Symbol.cpp  Symbol.h  TableEntry.cpp  TableEntry.h  input.txt  input_parser.cpp  input_parser.h  lexical rules.txt  ll_grammar.txt  main.cpp  output.md  output_first_follow.md  output_table.md  test  test.cpp  test.txt  (+2 more)
Lexical_analyzer/: CMakeLists.txt  DFADecoder.cpp  DFAGenerator.cpp  DFAMinimizerMNtheorem.cpp  DFAMinimizerPartitioning.cpp  DFAState.cpp  NFA.cpp  NFAGenerator.cpp  RulesReader.cpp  State.cpp  lexica.cpp  lexica.h  main.cpp
Lexical_analyzer/include/: DFADecoder.h  DFAGenerator.h  DFAMinimizerMNtheorem.h  DFAMinimizerPartitioning.h  DFAState.h  NFA.h  NFAGenerator.h  RulesReader.h  State.h  lexica.h
Predictive_Parser/: CMakeLists.txt  FirstFollowGen.cpp  GrammarReader.cpp  GrammarReader2.cpp  GrammerReader.cpp  LL_Grammar.cpp  Left_Factoring.cpp  ParsingTableGenerator.cpp  PredictiveParserGen.cpp  PrefixTree.cpp  Production.cpp  Symbol.cpp  TableEntry.cpp  ll_grammar.txt  lol.cpp
Predictive_Parser/include/: FirstFollowGen.h  GrammarReader.h  GrammerReader.h  InputParser.h  LL_Grammar.h  Left_Factoring.h  ParsingTableGenerator.h  PredictiveParserGenerator.h  PrefixTree.h  Production.h  Symbol.h  TableEntry.h
Results/: output_first_follow.md
Tests/grammar_is_LL/: lexrules.txt
Tests/grammar_not_LL/: Grammar.txt  input.txt
Tests/report input/: input.txt
Utils/: Compiler.cpp  MarkdownTable.cpp  OutputHandler.cpp
Utils/include/: Compiler.h  MarkdownTable.h  OutputHandler.h
bonus_test_input/: lex_rules.txt
old_stuff/: GrammarReader2.cpp  InputParser.h  input2.txt
omar_test_input/: grammar.txt  rules.txt
report input/: Grammar.txt
test_input/: TestGrammar.txt  input3.txt  input4.txt  lexRules3.txt
